--- a/release/title.html
+++ b/release/title.html
@@ -89,9 +89,10 @@ coming from a Rails background, you understand that a large part of Rails' value
 is expressing and implementing highly-opinionated conventions that guide
 development decisions.  Backbone doesn’t do this - conventions for rich
 client-side applications aren’t as well set-down and individual use cases vary
-more widely.  Instead of trying to serve as "the one way" etc (TODO: elaborate)
-Backbone provides a set of structures that help you organize your application by
-building your own framework with its own set of conventions.</p>
+more widely.  Instead of trying to serve as "the one way" or an opinionated
+framework like Rails, Backbone provides a set of structures that help you
+organize your application by building your own framework with its own set of
+conventions.</p>
 <div class="section" lang="en">
 <div class="titlepage"><div><div><h3 class="title">
 <a id="_why_use_backbone_js"></a>Why use Backbone.js</h3></div></div></div>
